add stereoblock matcher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,13 @@ ENDIF()
 
 SET(SOURCE main.cpp ./calib/stereocalib.cpp ./rectify/stereorect.cpp)
 SET(SOURCE_TEST main_test.cpp)
+SET(SOURCE_MATCH main_corres.cpp ./corres/stereomatch.cpp)
 
 IF(OpenCV_FOUND)
 	ADD_EXECUTABLE(stereocalib ${SOURCE})
 	TARGET_LINK_LIBRARIES(stereocalib ${OpenCV_LIBS})
 	ADD_EXECUTABLE(stereotest ${SOURCE_TEST})
 	TARGET_LINK_LIBRARIES(stereotest ${OpenCV_LIBS})
+	ADD_EXECUTABLE(stereomatch ${SOURCE_MATCH})
+	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS})
 ENDIF()
