--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,12 @@ ELSE()
 	MESSAGE(FATAL_ERROR "OpenCV Not FOUND")
 ENDIF()
 
-SET(SOURCE main.cpp ./calib/stereocalib.cpp ./rectify/stereorect.cpp)
+SET(SOURCE_CALIB main_calib.cpp ./calib/stereocalib.cpp ./rectify/stereorect.cpp)
 SET(SOURCE_TEST main_test.cpp)
 SET(SOURCE_MATCH main_corres.cpp ./corres/stereomatch.cpp)
 
 IF(OpenCV_FOUND)
-	ADD_EXECUTABLE(stereocalib ${SOURCE})
+	ADD_EXECUTABLE(stereocalib ${SOURCE_CALIB})
 	TARGET_LINK_LIBRARIES(stereocalib ${OpenCV_LIBS})
 	ADD_EXECUTABLE(stereotest ${SOURCE_TEST})
 	TARGET_LINK_LIBRARIES(stereotest ${OpenCV_LIBS})
