link with point cloud

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,18 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(StereoVisionLibrary)
 
 FIND_PACKAGE(OpenCV REQUIRED)
+FIND_PACKAGE(PCL 1.2 QUIET)
 
 IF(OpenCV_FOUND)
 	MESSAGE(STATUS "OpenCV Found")
 ELSE()
 	MESSAGE(FATAL_ERROR "OpenCV Not FOUND")
+ENDIF()
+
+IF(PCL_FOUND)
+	MESSAGE(STATUS "PCL Found")
+ELSE()
+	MESSAGE(STATUS "PCL Not Found")
 ENDIF()
 
 SET(SOURCE_CALIB main_calib.cpp ./calib/stereocalib.cpp ./rectify/stereorect.cpp)
@@ -18,6 +25,12 @@ IF(OpenCV_FOUND)
 	TARGET_LINK_LIBRARIES(stereocalib ${OpenCV_LIBS})
 	ADD_EXECUTABLE(stereotest ${SOURCE_TEST})
 	TARGET_LINK_LIBRARIES(stereotest ${OpenCV_LIBS})
+ENDIF()
+
+IF(PCL_FOUND)
+	INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
+	LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
+	ADD_DEFINITIONS(${PCL_DEFINITIONS})
 	ADD_EXECUTABLE(stereomatch ${SOURCE_MATCH})
-	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS})
+	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS} ${PCL_LIBRARIES})
 ENDIF()
