Update Point Cloud in Real time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,5 +32,5 @@ IF(PCL_FOUND)
 	LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
 	ADD_DEFINITIONS(${PCL_DEFINITIONS})
 	ADD_EXECUTABLE(stereomatch ${SOURCE_MATCH})
-	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS} ${PCL_LIBRARIES})
+	TARGET_LINK_LIBRARIES(stereomatch ${OpenCV_LIBS} ${PCL_LIBRARIES} -lpthread)
 ENDIF()
